# classurency

./: README.md  classurency.kv  main.py  pyproject.toml
modules/: barcode_scanner.py  rfid.py
screens/: idlescreen.py
views/accountscreen/: accountscreen.kv  accountscreen.py
views/idlescreen/: idlescreen.kv  idlescreen.py
views/shoppingscreen/: shoppingscreen.kv  shoppingscreen.py
