[tool.poetry]
name = "classurency"
version = "0.1.0"
description = ""
authors = ["Joonas Reinikka <joonas.reinikka@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
adafruit-circuitpython-charlcd = "^3.4.10"
autopep8 = "^2.0.4"
rpi-gpio = "^0.7.1"
spidev = "^3.6"
mfrc522 = "^0.0.7"
kivy = "^2.3.1"
docutils = "0.21"
mypy = "^1.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "site-packages",
    "venv",
]

line-length = 120
target-version = "py38"
